# ai-learning-inbox

./: .dev.vars.example  .env.example  .gitignore  AGENTS.md  PROJECT_CONTEXT.md  README.md  manage.py  package-lock.json  package.json  pyproject.toml  tsconfig.json  wrangler.jsonc
.github/workflows/: ci.yml
migrations/: 0001_initial.sql  0002_action_item_status_updated_at.sql  0003_analysis_processing_metrics.sql  0004_action_item_usefulness.sql
src/ai_learning_inbox/: __init__.py  app.py  cli.py  db.py  models.py  schemas.py  services.py  settings.py
src/ai_learning_inbox/templates/: base.html  digest_detail.html  index.html  post_detail.html  posts.html
tests/: analysis-schema.test.ts  app.test.ts  ci.test.ts  digest.test.ts  instagram.test.ts  normalize.test.ts  openai.test.ts  repository.test.ts  test_app.py  threads.test.ts  ui.test.ts  x.test.ts
worker/: app.ts  index.ts  types.ts
worker/domain/: digest.ts  normalize.ts  schemas.ts
worker/providers/: instagram.ts  openai.ts  threads.ts  x.ts
worker/repositories/: d1.ts
worker/ui/: render.ts
