[project]
name = "ai-learning-inbox"
version = "0.1.0"
description = "Private social-post learning inbox for AI experiments and actionable summaries"
readme = "README.md"
authors = [
    { name = "ryanzhxu", email = "ryan.xu282@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.3",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openai>=2.44.0",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.50.0",
]

[project.scripts]
ai-learning-inbox = "ai_learning_inbox:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
